--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
       crossorigin="anonymous"
     ></script>
+    <meta http-equiv="Refresh" content="2; url=public/index.html">
   </head>
   <body>
     <header>
