--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Test Document</title>
-    <link rel="stylesheet" href="teststyle.css" />
+    <link rel="stylesheet" href="style.css" />
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
